# BaumanStudy

./: README.md
ActivityLifiCycle/app/: build.gradle
ActivityLifiCycle/gradle/wrapper/: gradle-wrapper.properties
BeerAdvisor/app/: build.gradle
BeerAdvisor/gradle/wrapper/: gradle-wrapper.properties
BeersSelf/: settings.gradle
C_prog/lab_01_04_06/: main.c
C_prog/lab_01_1_1/: main.c
C_prog/lab_01_1_2/: main.c
C_prog/lab_01_1_3/: main.c
C_prog/lab_02_00_05/: test.txt
C_prog/lab_02_00_06/: main.c
C_prog/lab_02_1_4/: main.c  test.txt
C_prog/lab_03_02_01/: main.c  test.txt
C_prog/lab_03_02_02/: main.c
C_prog/lab_03_02_04/: main.c
C_prog/lab_04_00_03/: my_functions.c
C_prog/lab_04_02_02/: my_functions.c  my_functions.h  test.txt
C_prog/lab_04_1/: my_strpbrk.c
C_prog/lab_06_02_01/: main.c
C_prog/lab_06_02_01/func_tests/: neg_02_out.txt  neg_03_out.txt  neg_04_out.txt  pos_01_args.txt  pos_03_out.txt  pos_04_args.txt
C_prog/lab_07_01/: Makefile
C_prog/lab_07_01/data_for_unit_tests/: data3.txt
C_prog/lab_07_01/func_tests/: neg_04_in.txt  neg_05_args.txt  neg_07_in.txt  neg_07_out.txt  pos_01_out.txt  pos_03_args.txt
C_prog/lab_07_01/src/: functions.c  main.c
C_prog/lab_07_01/unit_tests/: check_iostream.c  check_main.c
C_prog/lab_08_03_01/func_tests/: neg_01_in.txt  neg_03_in.txt  neg_03_out.txt  neg_04_out.txt  pos_04_out.txt  pos_05_in.txt  pos_05_out.txt
C_prog/lab_08_03_01/headers/: functions.h
C_prog/lab_08_03_01/src/: functions.c
C_prog/lab_08_03_01/unit_tests/: check_functions.c  unit.h
C_prog/lab_09_02_01/: Makefile
C_prog/lab_09_02_01/data_for_unit_tests/: data2.txt  data3.txt
C_prog/lab_09_02_01/func_tests/: neg_02_args.txt  neg_06_out.txt  neg_07_in.txt  pos_02_in.txt
C_prog/lab_09_02_01/headers/: constants.h  functions.h
C_prog/lab_09_02_01/unit_tests/: check_iostream.c  unit.h
C_prog/lab_10_01_01/: Makefile
C_prog/lab_10_01_01/func_tests/: neg_01_args.txt  neg_03_in.txt  neg_04_in.txt  readme.md
C_prog/lab_10_01_01/headers/: constants.h  iostream.h  mem_manager.h  work_with_list.h
C_prog/lab_10_01_01/src/: mem_manager.c
C_prog/lab_10_01_01/unit_tests/: check_functions.c  check_main.c
C_prog/lab_10_04_02/: Makefile
C_prog/lab_10_04_02/func_tests/: neg_01_in.txt  pos_01_in.txt  pos_02_in.txt  pos_04_in.txt
C_prog/lab_10_04_02/headers/: functions.h  iostream.h
C_prog/lab_11_01_01/: Makefile  format.txt
C_prog/lab_12_2_2/: Makefile
C_prog/lab_51_00_02/: in_3.txt  in_6.txt  main.c  my_functions.c  out_3.txt
C_prog/lab_51_1_1/: in_1.txt  in_2.txt  in_5.txt  my_func.c  out_5.txt  out_6.txt
C_prog/lab_51_3/: in_5.txt  in_7.txt  in_8.txt  my_functions.h  out_3.txt  out_4.txt  out_7.txt  out_8.txt
C_prog/rk_01_02/: main.c
HeadFirst/: settings.gradle
HeadFirst/app/: build.gradle
JavaForAndroid/ActivityLifiCycle/: settings.gradle
JavaForAndroid/week_1/: readme.md
JavaForAndroid/week_2/: readme.md
LayoutExample/app/: build.gradle
LayoutWork/: settings.gradle
LayoutWork/app/: build.gradle
Messenger/app/: build.gradle
Stopwatch/app/: build.gradle
SturbuzzCoffee/: settings.gradle
SturbuzzCoffee/app/: build.gradle
TADS/tisd/: constants.h  functions.c  iostream.c  main.c  make_file.sh
TADS/tisd2/: a.out  constants.h  data.txt  data_2.txt  data_structures.h  iostream.c  main.c  sorts.c  Отчет_Лаб2_Криков_ИУ7-33Б.odt
TADS/tisd4/: Makefile  app.out  Лабораторная работа 4 Криков ИУ7-33Б.odt
TADS/tisd6/: app.out  balanced_tree.gv  Отчет по 6 ЛР ТиСД.odt
TADS/tisd7/: data.txt  g.dot  Отчет 7 ЛР.odt
WhatHappenedNext/: settings.gradle
WhatHappenedNext/app/: build.gradle
Workout/app/: build.gradle
XMessenger/: settings.gradle
XMessenger/app/: build.gradle
lab_3/build-lab_03-Desktop_x86_darwin_generic_mach_o_64bit-Debug/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h
lab_3/build_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  lab_03
python_sem_2/: my_menu.py
sem2/python_sem_2/: lab4.py  lab5.py
sem4/OOP/lab_3/build_cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lab_03.cbp
sem4/OOP/lab_3/build_cmake/lab_03_autogen/: moc_predefs.h  mocs_compilation.cpp
sem4/OOP/lab_3/build_cmake/lab_03_autogen/JPLOPBN3TM/: moc_mainwindow.cpp
sem4/OOP/lab_3/build_cmake/lab_03_autogen/include/: ui_mainwindow.h
(+662 files in other folders)
